syntax = "proto3";

package agreement.v2;

message AgreementV2 {
  string id = 1;
  string eserviceId = 2;
  string descriptorId = 3;
  string producerId = 4;
  string consumerId = 5;
  AgreementStateV2 state = 6;
  repeated VerifiedAttributeV2 verifiedAttributes = 7;
  optional bool suspendedByConsumer = 8;
  optional bool suspendedByProducer = 9;
  int64 createdAt = 10;
  optional int64 updatedAt = 11;
  optional bool suspendedByPlatform = 12;
  repeated CertifiedAttributeV1 certifiedAttributes = 13;
  repeated DeclaredAttributeV1 declaredAttributes = 14;
  repeated AgreementDocumentV2 consumerDocuments = 15;
  optional string consumerNotes = 16;
  optional AgreementDocumentV2 contract = 17;
  optional StampsV1 stamps = 18;
  optional string rejectionReason = 19;
  optional int64 suspendedAt = 20;
}

message VerifiedAttributeV2 {
  reserved 2, 3, 4, 5;

  string id = 1;
}

message CertifiedAttributeV1 {
  string id = 1;
}

message DeclaredAttributeV1 {
  string id = 1;
}

message AgreementDocumentV2 {
  string id = 1;
  string name = 2;
  string prettyName = 3;
  string contentType = 4;
  string path = 5;
  int64 createdAt = 6;
}

enum AgreementStateV2 {
  PENDING = 0;
  ACTIVE = 1;
  SUSPENDED = 2;
  ARCHIVED = 3;
  DRAFT = 4;
  MISSING_CERTIFIED_ATTRIBUTES = 5;
  REJECTED = 6;
}

message StampV2 {
  string who = 1;
  int64 when = 2;
}

message StampsV1 {
  optional StampV2 submission = 1;
  optional StampV2 activation = 2;
  optional StampV2 rejection = 3;
  optional StampV2 suspensionByProducer = 4;
  optional StampV2 upgrade = 5;
  optional StampV2 archiving = 6;
  optional StampV2 suspensionByConsumer = 7;
}
